--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,57 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="Styles/home.css">
 </head>
-<body>
-    <div id="app" class="container home">
-    <h1 class="title"><i class="fas fa-plane"></i>&nbsp;FSX Tod Calcukator</h1>
 
+<body>
+    <div id="app" class="container  home">
+        <h1 class="title"><i class="fas fa-plane"></i>&nbsp;FSX Tod Calcukator</h1>
+        <div class="columns">
+            <div class="column">
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label">Vitesse sol</label>
+                    </div>
+                    <div class="field">
+                        <p class="control">
+                            <input class="input" type="text" placeholder="Vitesse sol" v-model="GroundSpeed">
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label">Δz</label>
+                    </div>
+                    <div class="field">
+                        <p class="control">
+                            <input class="input" type="text" placeholder="Δz" v-model="Δz">
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label">Vz</label>
+                    </div>
+                    <div class="field">
+                        <p class="control">
+                            <input class="input" type="text" placeholder="Vz" v-model="Vz">
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br />
+        <button class="button is-link" v-on:click="calculate">Calculer</button>
+        <br />
+        <br />
+        <p>Resulte: {{result}}Nm</p>
+        <i>Distance de mise en descente = (vitesse sol * Δ Z)/(60 * Vz) </i>
     </div>
     <script src="node_modules/vue/dist/vue.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 </html>
